[package]
name = "rust-llm-experimentation"
version = "0.1.0"
edition = "2021"
description = "A repo for experimentation and benchmarking llms implemented using rust"
repository = "https://github.com/testdepth/rust-llm-experimentation"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
